Done with everything minus the cohort piece.

--- a/StudentExercisesAPI/appsettings.json
+++ b/StudentExercisesAPI/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=StudentExerciseDB;Trusted_Connection=True;"
+  }
 }
